# lttng-ust

./: .gitignore  NAMESPACING  TODO  configure.ac
doc/examples/: Makefile.am
doc/examples/java-log4j2-basic/: Hello.java  Makefile  run
doc/examples/java-log4j2-prog/: Hello.java
extras/abi/: dump_abi.sh  liblttng-ust-ctl.so.txt  liblttng-ust-cyg-profile-fast.so.txt  liblttng-ust-cyg-profile.so.txt  liblttng-ust-dl.so.txt  liblttng-ust-fd.so.txt  liblttng-ust-fork.so.txt  liblttng-ust-libc-wrapper.so.txt  liblttng-ust-pthread-wrapper.so.txt  liblttng-ust-tracepoint.so.txt  liblttng-ust.so.txt
extras/abi/2.12/x86_64-pc-linux-gnu/: liblttng-ust-ctl.so.4.xml  liblttng-ust-cyg-profile-fast.so.0.xml  liblttng-ust.so.0.xml  (+7 more)
extras/abi/empty/: liblttng-ust-tracepoint.so.0.xml
include/: Makefile.am  usterr-signal-safe.h
include/lttng/: bitmap.h  bug.h  ringbuffer-config.h  tracef.h  tracelog.h  tracepoint-rcu.h  tracepoint.h  ust-clock.h  ust-config.h.in  ust-context-provider.h  ust-error.h  ust-events.h  ust-tracepoint-event.h  ust-version.h.in  ust.h
include/lttng/urcu/: arch.h  compiler.h  debug.h  hlist.h  list.h  pointer.h  rculist.h  system.h  tls-compat.h  uatomic.h  wfcqueue.h
include/lttng/urcu/arch/: aarch64.h  alpha.h  arm.h  gcc.h  generic.h  hppa.h  ia64.h  m68k.h  mips.h  nios2.h  ppc.h  riscv.h  s390.h  sparc64.h  tile.h  unknown.h  x86.h
include/lttng/urcu/static/: pointer.h  urcu-ust.h  wfcqueue.h
include/lttng/urcu/uatomic/: aarch64.h  alpha.h  arm.h  gcc.h  generic.h  hppa.h  ia64.h  m68k.h  mips.h  nios2.h  ppc.h  riscv.h  s390.h  sparc64.h  tile.h  unknown.h  x86.h
libcounter/: counter-api.h  counter-internal.h  counter.c  shm.h
liblttng-ust/: clock.h  compat_futex.c  error.h  event-notifier-notification.c  futex.h  jhash.h  lttng-bytecode-interpreter.c  lttng-bytecode-validator.c  lttng-bytecode.c  lttng-clock.c  lttng-context-cgroup-ns.c  lttng-context-ipc-ns.c  lttng-context-mnt-ns.c  lttng-context-net-ns.c  lttng-context-perf-counters.c  lttng-context-pid-ns.c  lttng-context-procname.c  lttng-context-provider.c  lttng-context-time-ns.c  lttng-context-user-ns.c  lttng-context-uts-ns.c  lttng-context-vegid.c  lttng-context-veuid.c  lttng-context-vgid.c  lttng-context-vpid.c  lttng-context-vsgid.c  lttng-context-vsuid.c  lttng-context-vtid.c  lttng-context-vuid.c  lttng-events.c  lttng-getcpu.c  lttng-hash-helper.h  lttng-probes.c  lttng-ring-buffer-client.h  lttng-ring-buffer-metadata-client.h  lttng-tracer-core.h  lttng-ust-abi.c  lttng-ust-comm.c  lttng-ust-statedump.c  lttng-ust-urcu-pointer.c  (+9 more)
liblttng-ust-comm/: lttng-ust-comm.c  lttng-ust-fd-tracker.c
liblttng-ust-ctl/: ustctl.c
liblttng-ust-fd/: lttng-ust-fd.c
liblttng-ust-libc-wrapper/: lttng-ust-malloc.c
libringbuffer/: backend.h  backend_internal.h  frontend.h  frontend_api.h  frontend_internal.h  frontend_types.h  getcpu.h  ring_buffer_backend.c  ring_buffer_frontend.c  shm.h  smp.c  vatomic.h
m4/: pprint.m4
python-lttngust/lttngust/: loghandler.py
src/lib/lttng-ust-common/: fd-tracker.c
src/lib/lttng-ust-java-agent/jni/log4j2/: Makefile.am  lttng_ust_log4j2.c  lttng_ust_log4j2.h
(+14 files in other folders)
